[gd_scene load_steps=9 format=3 uid="uid://r5cno10sn0ge"]

[ext_resource type="Script" path="res://script/component/outfit_component.gd" id="1_ux08j"]
[ext_resource type="Texture2D" uid="uid://0a3011qqckwu" path="res://img/piece/player/filter.png" id="2_lw6v8"]
[ext_resource type="Shader" uid="uid://dg7bi7opsage5" path="res://shader/hit_flash.tres" id="3_amt67"]
[ext_resource type="Texture2D" uid="uid://2bun5eec1hjm" path="res://img/piece/standerd/white.png" id="4_gt6vr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8hs1b"]
resource_local_to_scene = true
shader = ExtResource("3_amt67")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.631754, 0.0712026, 0.0241384, 1)

[sub_resource type="Animation" id="Animation_38ae8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("click_box/Icon:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m206l"]
resource_name = "hit_flash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("click_box/Icon:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_psrfc"]
_data = {
"RESET": SubResource("Animation_38ae8"),
"hit_flash": SubResource("Animation_m206l")
}

[node name="OutfitComponent" type="Node2D"]
script = ExtResource("1_ux08j")

[node name="txt_value" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(20, 20)
offset_left = 13.0
offset_top = 13.0
offset_right = 33.0
offset_bottom = 33.0
mouse_filter = 2
bbcode_enabled = true
metadata/_edit_use_anchors_ = true

[node name="click_box" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -36.0
offset_top = -36.0
offset_right = 36.0
offset_bottom = 36.0
mouse_filter = 1

[node name="player_effect" type="Sprite2D" parent="click_box"]
visible = false
position = Vector2(36, 36)
texture = ExtResource("2_lw6v8")
metadata/_edit_use_anchors_ = true

[node name="Icon" type="Sprite2D" parent="click_box"]
material = SubResource("ShaderMaterial_8hs1b")
position = Vector2(36, 36)
texture = ExtResource("4_gt6vr")
hframes = 3
vframes = 3

[node name="ControlPanel" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 40.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="btn_move" type="Button" parent="ControlPanel"]
visible = false
z_index = 150
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0615385
anchor_right = 0.025
anchor_bottom = 0.0615385
offset_top = 32.0
offset_right = 40.0
offset_bottom = 63.0
text = "移動"
metadata/_edit_use_anchors_ = true

[node name="btn_attack" type="Button" parent="ControlPanel"]
visible = false
z_index = 150
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0461538
anchor_right = 0.025
anchor_bottom = 0.0461538
offset_right = 40.0
offset_bottom = 31.0
text = "攻擊"
metadata/_edit_use_anchors_ = true

[node name="btn_cast" type="Button" parent="ControlPanel"]
visible = false
layout_mode = 0
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 6.0
text = "施放"

[node name="HitFlashAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_psrfc")
}

[connection signal="gui_input" from="click_box" to="." method="_on_icon_gui_input"]
[connection signal="mouse_entered" from="click_box" to="." method="_on_icon_mouse_entered"]
[connection signal="mouse_exited" from="click_box" to="." method="_on_icon_mouse_exited"]
[connection signal="mouse_entered" from="ControlPanel/btn_move" to="." method="_on_btn_move_mouse_entered"]
[connection signal="pressed" from="ControlPanel/btn_move" to="." method="_on_btn_move_pressed"]
[connection signal="mouse_entered" from="ControlPanel/btn_attack" to="." method="_on_btn_attack_mouse_entered"]
[connection signal="mouse_exited" from="ControlPanel/btn_attack" to="." method="_on_btn_attack_mouse_exited"]
[connection signal="pressed" from="ControlPanel/btn_attack" to="." method="_on_btn_attack_pressed"]
[connection signal="pressed" from="ControlPanel/btn_cast" to="." method="_on_btn_cast_pressed"]
