[gd_scene load_steps=3 format=3 uid="uid://bx028wy2lu25i"]

[ext_resource type="Script" path="res://script/component/outfit_component.gd" id="1_1p3yx"]
[ext_resource type="Texture2D" uid="uid://cocejlgthjmgv" path="res://img/piece/player/red_filter.png" id="2_ysa7d"]

[node name="OutfitComponent" type="Node2D"]
script = ExtResource("1_1p3yx")

[node name="PlayerEffect" type="TextureRect" parent="."]
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("2_ysa7d")
